@@ -8,6 +8,9 @@
     - Update _merge_hashes() so it can also merge arrays and hashes into a new
       array. This is necessary to allow default_args() to define a different
       ref-type than the element or processor which uses its values.
+    
+    - Update Element::reCAPTCHA tests after changes to Captcha::reCAPTHCA
+      (bump dependency version).
 
 0.07002 2010-06-24
 
